# OpenXTerm

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: ci-cd.yml  ssh-integration.yml
docs/: releasing.md  storage.md
docs/architecture/: libssh-rs-spike.md
docs/qa/: embedded-ssh-sftp-x11-smoke.md  (+1 more)
script/: build_and_run.sh  check_style_tokens.mjs  collect_release_notes_input.mjs  generate_changelog.mjs  run_ssh_integration.sh  run_tauri.mjs  set_version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  file_ops.rs  font_support.rs  lib.rs  libssh_spike.rs  main.rs  models.rs  native_drag.rs  native_menu.rs  probe.rs  proxy.rs  runtime.rs  storage.rs  system_auth.rs  system_auth_macos.m  x11_support.rs
src-tauri/src/drag/: macos.m  mod.rs
src-tauri/src/platform/: menu.rs  mod.rs  x11.rs
src-tauri/src/runtime/: local_shell.rs  serial.rs  status_scripts.rs  telnet.rs  x11.rs
src-tauri/src/runtime/ssh/: auth.rs  guidance.rs  host_key.rs  interactive.rs  interactive_reader.rs  interactive_text.rs  mod.rs  ppk.rs  session.rs
src-tauri/src/runtime/status/: mod.rs
src-tauri/src/runtime/x11/: auth.rs  diagnostics.rs  mod.rs  proxy.rs
src-tauri/src/transfer/: download.rs  entries.rs  errors.rs  ftp.rs  lifecycle.rs  metadata.rs  mod.rs  paths.rs  progress.rs  sftp.rs  state.rs  upload.rs
(+98 files in other folders)
